<?xml version="1.0" encoding="utf-8"?>
<layout>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">

   <androidx.core.widget.NestedScrollView
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:fillViewport="true">

      <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent">

         <ImageView
             android:id="@+id/imageView"
             android:layout_width="200dp"
             android:layout_height="200dp"
             android:layout_centerHorizontal="true"
             android:layout_marginStart="@dimen/grid_2x"
             android:layout_marginTop="@dimen/grid_2x"
             android:layout_marginEnd="@dimen/grid_2x"
             android:layout_marginBottom="@dimen/grid_2x"
             android:contentDescription="@string/app_name"
             android:src="@drawable/logo" />

         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/emailTIL"
             android:layout_width="@dimen/standard_width"
             android:layout_height="wrap_content"
             android:layout_below="@id/imageView"
             android:layout_centerHorizontal="true"
             android:layout_margin="@dimen/grid_2x">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress" />
         </com.google.android.material.textfield.TextInputLayout>

         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/passwordTIL"
             android:layout_width="@dimen/standard_width"
             android:layout_height="wrap_content"
             android:layout_below="@id/emailTIL"
             android:layout_centerHorizontal="true"
             android:layout_margin="@dimen/grid_2x">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:inputType="textPassword" />
         </com.google.android.material.textfield.TextInputLayout>

         <Button
             android:id="@+id/button_login"
             style="@style/standardButton"
             android:layout_width="@dimen/standard_width"
             android:layout_height="@dimen/standard_height"
             android:layout_below="@+id/passwordTIL"
             android:layout_centerHorizontal="true"
             android:layout_marginStart="@dimen/grid_2x"
             android:layout_marginTop="@dimen/grid_2x"
             android:layout_marginEnd="@dimen/grid_2x"
             android:layout_marginBottom="@dimen/grid_2x"
             android:onClick="onLogin"
             android:text="@string/button_login" />

         <TextView
             android:id="@+id/signupTV"
             style="@style/linkText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/button_login"
             android:layout_centerHorizontal="true"
             android:layout_marginStart="@dimen/grid_2x"
             android:layout_marginTop="@dimen/grid_2x"
             android:layout_marginEnd="@dimen/grid_2x"
             android:layout_marginBottom="@dimen/grid_2x"
             android:clickable="true"
             android:onClick="goToSignup"
             android:textColor="@color/Green"
             android:text="@string/text_signup" />


      </RelativeLayout>
   </androidx.core.widget.NestedScrollView>

   <LinearLayout
       android:id="@+id/loginProgressLayout"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:background="@color/transparent_grey"
       android:gravity="center"
       android:orientation="vertical"
       android:visibility="gone">

      <ProgressBar
          android:layout_width="wrap_content"
          android:layout_height="wrap_content" />
   </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>