<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

   <!-- Nested Scroll-View -->
   <androidx.core.widget.NestedScrollView
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:fillViewport="true">

      <RelativeLayout
          android:id="@+id/profileLayout"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:layout_marginTop="@dimen/grid_3x"
          android:layout_marginBottom="@dimen/grid_3x"
          android:gravity="center_horizontal">

         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/photoIV"
             android:layout_width="@dimen/standard_width"
             android:layout_height="@dimen/standard_width"
             android:layout_marginBottom="@dimen/grid_2x"
             android:src="@drawable/default_user" />

         <!-- UserName -->
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/usernameTIL"
             android:layout_width="@dimen/standard_width"
             android:layout_height="wrap_content"
             android:layout_below="@id/photoIV"
             android:paddingBottom="@dimen/grid_2x">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/usernameET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_user_name" />

         </com.google.android.material.textfield.TextInputLayout>


         <!-- Email -->
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/emailTIL"
             android:layout_width="@dimen/standard_width"
             android:layout_height="wrap_content"
             android:layout_below="@id/usernameTIL"
             android:paddingBottom="@dimen/grid_2x">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email" />

         </com.google.android.material.textfield.TextInputLayout>

         <Button
             android:id="@+id/applyButton"
             style="@style/standardButton"
             android:layout_width="@dimen/standard_width"
             android:layout_height="@dimen/standard_height"
             android:layout_below="@id/emailTIL"
             android:layout_marginBottom="@dimen/grid_2x"
             android:onClick="onApply"
             android:text="@string/button_apply" />

         <Button
             android:id="@+id/logoutButton"
             style="@style/standardButton"
             android:layout_width="@dimen/standard_width"
             android:layout_height="@dimen/standard_height"
             android:layout_below="@id/applyButton"
             android:layout_marginBottom="@dimen/grid_2x"
             android:onClick="onSignOut"
             android:text="@string/button_logout" />

      </RelativeLayout>
   </androidx.core.widget.NestedScrollView>

   <!-- Progress Bar -->
   <LinearLayout
       android:id="@+id/profileProgressLayout"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:background="@color/transparent_grey"
       android:elevation="5dp"
       android:gravity="center"
       android:orientation="vertical"
       android:visibility="gone">

      <ProgressBar
          android:layout_width="wrap_content"
          android:layout_height="wrap_content" />
   </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>