<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

   <!-- Search Bar -->
   <androidx.cardview.widget.CardView
       android:id="@+id/cardView"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:background="@color/design_default_color_primary"
       android:orientation="horizontal"
       app:cardElevation="4dp"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent">

      <!-- VIEW: CardView-->
      <androidx.cardview.widget.CardView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_margin="@dimen/grid_1x"
          app:cardCornerRadius="@dimen/standard_corner_radius">

         <!-- VIEW: Image: Logo -->
         <ImageView
             android:id="@+id/logo"
             android:layout_width="@dimen/standard_image"
             android:layout_height="@dimen/standard_image"
             android:scaleType="centerCrop"
             android:src="@drawable/default_user"
             android:contentDescription="@string/desc_user_logo" />

      </androidx.cardview.widget.CardView>

      <!-- VIEW: Text: TitleBar-->
      <TextView
          android:id="@+id/titleBar"
          style="@style/Heading"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center_vertical"
          android:layout_marginStart="@dimen/standard_image"
          android:paddingStart="@dimen/grid_3x"
          android:paddingEnd="@dimen/grid_3x"
          android:text="@string/titlebar_title_home" />

      <!-- VIEW: Card: SearchBar -->
      <androidx.cardview.widget.CardView
          android:id="@+id/searchBar"
          android:layout_width="wrap_content"
          android:layout_height="match_parent"
          android:layout_gravity="center_vertical"
          android:visibility="gone"
          android:layout_marginStart="60dp"
          app:cardCornerRadius="@dimen/standard_corner_radius">

         <!-- VIEW: EditText: Search -->
         <EditText
             android:id="@+id/search"
             android:layout_width="@dimen/standard_width"
             android:layout_height="@dimen/search_input_height"
             android:background="@color/colorPrimary"
             android:drawableEnd="@android:drawable/ic_menu_search"
             android:hint="@string/hint_search"
             android:imeOptions="actionSearch"
             android:inputType="text"
             android:paddingStart="@dimen/grid_2x"
             android:paddingEnd="@dimen/grid_2x"
             android:textColor="@color/black"
             android:textColorHint="@color/dark_grey" />
      </androidx.cardview.widget.CardView>
   </androidx.cardview.widget.CardView>

   <!-- LAYOUT: Tab: Bottom-Tab Menu -->
   <com.google.android.material.tabs.TabLayout
       android:id="@+id/tabs"
      app:tabIconTint="@color/Green"
       android:layout_width="match_parent"
       android:layout_height="@dimen/standard_height"
       android:layout_marginBottom="@dimen/grid_2x"
       app:layout_constraintBottom_toBottomOf="parent"
       app:tabIndicator="@null">

      <!-- VIEW: TabItem: Home -->
      <com.google.android.material.tabs.TabItem
          android:id="@+id/tabHome"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:icon="@drawable/selector_home" />

      <!-- VIEW: TabItem: Search -->
      <com.google.android.material.tabs.TabItem
          android:id="@+id/tabSearch"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:icon="@drawable/selector_search" />

      <!-- VIEW: TabItem: My-Activity -->
      <com.google.android.material.tabs.TabItem
          android:id="@+id/tabMyActivity"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:icon="@drawable/selector_myactivity" />
   </com.google.android.material.tabs.TabLayout>

   <!-- VIEW: Pager -->
   <androidx.viewpager.widget.ViewPager
       android:id="@+id/container"
       android:layout_width="match_parent"
       android:layout_height="0dp"
       app:layout_behavior="@string/appbar_scrolling_view_behavior"
       app:layout_constraintBottom_toTopOf="@+id/tabs"
       app:layout_constraintTop_toBottomOf="@+id/cardView" />

   <!-- VIEW: Button: FAB-->
   <com.google.android.material.floatingactionbutton.FloatingActionButton
       android:id="@+id/fab"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_margin="@dimen/grid_3x"
       app:layout_constraintBottom_toTopOf="@+id/tabs"
       app:layout_constraintEnd_toEndOf="parent"

       app:srcCompat="@drawable/feather" />

   <!-- Progress Bar: Home -->
   <LinearLayout
       android:id="@+id/homeProgressLayout"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:background="@color/transparent_grey"
       android:elevation="5dp"
       android:gravity="center"
       android:orientation="vertical"
       android:visibility="gone">

      <ProgressBar
          android:layout_width="wrap_content"
          android:layout_height="wrap_content" />
   </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>